css/gallery.css
/*Carousel Gallery*/
.carousel-gallery {
  margin: 50px 0;
  padding: 0 30px;
}
.swiper-slide {
  box-shadow: -1px -5px 15px 3px blue;
  filter: drop-shadow(5px 13px 12px blue);
  margin: 30px;
}

@media screen and (min-width: 600px) {
  .carousel-gallery .swiper-slide a {
    display: block;
    width: 100%;
    height: 200px;
    border-radius: 4px;
    overflow: hidden;
    position: relative;
    -webkit-box-shadow: 3px 2px 20px 0px rgba(0, 0, 0, 0.2);
    -moz-box-shadow: 3px 2px 20px 0px rgba(0, 0, 0, 0.2);
    box-shadow: 3px 2px 20px 0px rgba(0, 0, 0, 0.2);
  }
}

@media screen and (max-width: 600px) {
  .carousel-gallery .swiper-slide a {
    display: block;
    width: 100%;
    height: 100px;
    border-radius: 4px;
    overflow: hidden;
    position: relative;
    -webkit-box-shadow: 3px 2px 20px 0px rgba(0, 0, 0, 0.2);
    -moz-box-shadow: 3px 2px 20px 0px rgba(0, 0, 0, 0.2);
    box-shadow: 3px 2px 20px 0px rgba(0, 0, 0, 0.2);
  }
}
.carousel-gallery .swiper-slide a:hover .image .overlay {
  opacity: 1;
}
.carousel-gallery .swiper-slide a .image {
  width: 100%;
  height: 100%;
  background-size: cover;
  background-position: center center;
}
.carousel-gallery .swiper-slide a .image .overlay {
  width: 100%;
  height: 100%;
  background-color: rgba(20, 20, 20, 0.8);
  text-align: center;
  opacity: 0;
  -webkit-transition: all 0.2s linear;
  -o-transition: all 0.2s linear;
  transition: all 0.2s linear;
}
.carousel-gallery .swiper-slide a .image .overlay em {
  color: #fff;
  font-size: 26px;
  position: relative;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  -o-transform: translateY(-50%);
  transform: translateY(-50%);
  display: inline-block;
}
.carousel-gallery .swiper-pagination {
  position: relative;
  bottom: auto;
  text-align: center;
  margin-top: 25px;
}
.carousel-gallery .swiper-pagination .swiper-pagination-bullet {
  -webkit-transition: all 0.2s linear;
  -o-transition: all 0.2s linear;
  transition: all 0.2s linear;
}
.carousel-gallery .swiper-pagination .swiper-pagination-bullet:hover {
  opacity: 0.7;
}
.carousel-gallery
  .swiper-pagination
  .swiper-pagination-bullet.swiper-pagination-bullet-active {
  background-color: #d63031;
  transform: scale(1.1, 1.1);
}

